# Rust-Chat-GPT

./: README.md
API-Call/: Cargo.toml
API-Call/src/: main.rs
API-Ethers-Call/: Cargo.toml  README.md
API-Ethers-Call/src/: main.rs
automate_gpt/: Cargo.toml
automate_gpt/src/: main.rs
automate_gpt/src/ai_functions/: aifunc_architect.rs  aifunc_managing.rs
automate_gpt/src/apis/: call_request.rs  mod.rs
automate_gpt/src/helpers/: command_line.rs  general.rs  mod.rs
automate_gpt/src/models/general/: llm.rs  mod.rs
web_server/: Cargo.toml
web_server/src/: main.rs
