[package]
name = "API-Ethers-Call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
ethers-core = "2.0.10"
dotenv = "0.15"
