[package]
name = "automate_gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
crossterm = "0.22.0"
async-trait = "0.1.51"
webbrowser = "0.5.0"
strum = "0.21.0"
strum_macros = "0.21.0"
ai_functions = "0.1.1"